# axum-template

./: .gitignore  Cargo.toml
src/: ctx.rs  lib.rs  log.rs  main.rs
src/controllers/: mod.rs  user_controller.rs
src/middlewares/: mw_auth.rs
src/model/: model.rs
src/routes/: login_route.rs  mod.rs  route_tickets.rs  v1_router.rs
src/test/: quick_dev.rs
